--- a/CoqMakefile.conf
+++ b/CoqMakefile.conf
@@ -60,5 +60,5 @@ COQMF_COQPROJECTNATIVEFLAG =
 #                                                                             #
 ###############################################################################
 
-COQMF_OTHERFLAGS = 
+COQMF_OTHERFLAGS = '--LaTeX' '--stdout'
 COQMF_INSTALLCOQDOCROOT = theories
